# EwSta

./: CMakeLists.txt  Makefile  README.md  README.txt  client.cc  example.grpc.pb.cc  example.grpc.pb.h  example.pb.cc  example.pb.h  example.proto  example_glfw_opengl3  generate_code_from_proto_file.sh  imgui.ini  server.cc  test_hello.sln
Debug/: test_hello.ilk
test_hello/: a.out  build.sh  main.cpp  test_hello.vcxproj
test_hello/Debug/: vc120.idb
test_hello/Debug/test_hello.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  test_hello.lastbuildstate
